[FIX] Improve Spanish Translations (#5397)
* Improve Spanish Translations

* Jellyfish

--- a/src/lib/i18n/dictionaries/es.json
+++ b/src/lib/i18n/dictionaries/es.json
@@ -247,7 +247,7 @@
   "description.beehive.boost": "Aumenta la probabilidad en +10% de obtener +0.2 de cosecha adicional cuando la colmena está llena.",
   "description.walrus.boost": "Aumenta la producción de pescado en +1.",
   "description.alba.boost": "Proporciona un +50% de probabilidad de obtener un pez básico adicional.",
-  "description.knowledge.crab.boost": "Activa el efecto Boost de la mezcla de brotes dobles.",
+  "description.knowledge.crab.boost": "Duplica el efecto del Boost del fertilizante Sprot Mix.",
   "description.maneki.neko.boost": "Otorga +1 en comida gratis al día.",
   "description.observatory.boost": "Aumenta la ganancia de XP en un +5%.",
   "description.blossombeard.boost": "Incrementa la ganancia de experiencia en un +10%.",
@@ -1484,9 +1484,9 @@
   "gameOptions.logout": "Cerrar sesión",
   "gameOptions.confirmLogout": "¿Estás seguro de que quieres cerrar sesión?",
   "gameOptions.developerOptions.timeMachine": "Máquina del tiempo",
-  "gameOptions.blockchainSettings": "Configuración de cadena de bloques",
-  "gameOptions.blockchainSettings.refreshChain": "Actualizar desde Chain",
-  "gameOptions.blockchainSettings.storeOnChain": "Tienda en cadena",
+  "gameOptions.blockchainSettings": "Configuración de Blockchain",
+  "gameOptions.blockchainSettings.refreshChain": "Actualizar desde Blockchain",
+  "gameOptions.blockchainSettings.storeOnChain": "Guardar en la Blockchain",
   "gameOptions.blockchainSettings.swapPOLForSFL": "Cambie POL por SFL",
   "gameOptions.blockchainSettings.transferOwnership": "Transferir la propiedad",
   "gameOptions.generalSettings": "Ajustes generales",
@@ -3552,7 +3552,7 @@
   "mix.one": "Mezcla 1",
   "description.hay": "Hierba seca utilizada como alimento para animales o ropa de cama.",
   "description.kernel.blend": "Mezcla de varios granos para alimentación o consumo.",
-  "description.nutribarley": "Suplemento nutricional o pienso a base de cebada.",
+  "description.nutribarley": "Suplemento nutricional o comida a base de cebada.",
   "description.mixed.grain": "Mezcla de granos o semillas para alimentar o plantar.",
   "upgrade.building": "Actualización {{building}}",
   "upgrade.intro": "Hola, amigo, ¿quieres mejorar tu {{building}} para que puedas conseguir más {{animals}}?",
@@ -3601,7 +3601,7 @@
   "double.rewards.deliveries": "Entregas con doble recompensa",
   "double.rewards.delivery": "Entrega de Double Rewards",
   "2x.rewards": "2 veces más recompensas",
-  "quickSelect.animalFeed": "Prepara un poco de pienso para animales.",
+  "quickSelect.animalFeed": "Prepara un poco de comida para animales.",
   "wakesIn": "Se despierta en:",
   "levelUp": "¡Sube de nivel!",
   "gameOptions.plazaSettings.pickServer": "Elige un servidor",
@@ -3712,7 +3712,7 @@
   "description.merinoJumper.boost": "+1 Lana merino",
   "description.mooVer.boost": "+0.25 Cuero",
   "description.swissWhiskers.boost": "+500 XP para recetas de queso",
-  "description.cluckulator.boost": "-25% de pienso para pollos",
+  "description.cluckulator.boost": "-25% de comida para pollos",
   "chores.ended": "Todo ese tiempo diciéndole a Bumpkins qué hacer... estoy cansado. Creo que necesito unas vacaciones.",
   "digby.closed": "Desierto cerrado",
   "digby.holiday": "El desierto está cerrado hoy. Vuelve más tarde.",
@@ -3787,7 +3787,7 @@
   "description.undead.rooster": "Una desafortunada víctima de la guerra. +0,1 huevos de rendimiento.",
   "description.bale": "Aumente la producción de huevos.",
   "description.bale.boost": "+0.1 Huevo",
-  "description.fat.chicken.boost": "-10% de pienso para pollos",
+  "description.fat.chicken.boost": "-10% de comida para pollos",
   "description.el.pollo.veloz.boost": "-2h de tiempo de producción de huevos",
   "description.farm.dog.boost": "-25% de tiempo de producción ovina",
   "description.free.range": "+0.1 Productos de origen animal",
@@ -3832,7 +3832,7 @@
   "description.superTotem.boost": "Reducción del 50% en el tiempo dedicado a la cosecha, los minerales, las frutas, la cocción y el árbol",
   "description.super.totem.expired": "Tu supertótem ha caducado. ¡Dirígete a Pumpkin Plaza para descubrir y crear más objetos mágicos que potencien tus habilidades agrícolas!",
   "description.super.totem.temporarily": "El supertótem aumenta temporalmente tu tiempo de cocción, cosechas, árboles y minerales. ¡Sácale el máximo partido!",
-  "season.bullRun.bonus": "10% menos de pienso para alimentar a los animales",
+  "season.bullRun.bonus": "10% menos de comida para alimentar a los animales",
   "gems.noShipment": "Sin envío",
   "gems.buyStock": "Compra tus existencias para recibir tu envío.",
   "npcDialogues.pumpkinPete.chore1": "¿Has visto los objetos extraños en el cielo? ¡Vigila tus cosechas!",
@@ -4040,7 +4040,7 @@
   "marketplace.reward.seedPack.description": "Un stock de semillas",
   "marketplace.reward.diggingPack.description": "Un stock de herramientas de excavación",
   "marketplace.reward.fishingPack.description": "Un paquete de utilidades de pesca",
-  "marketplace.reward.animalPack.description": "Un paquete de pienso para animales",
+  "marketplace.reward.animalPack.description": "Un paquete de comida para animales",
   "marketplace.whaleTrades": "Comerciantes de ballenas",
   "marketplace.topFriends": "Mejores amigos",
   "marketplace.notForSale": "No está a la venta",
@@ -4138,7 +4138,7 @@
   "skill.hectareFarm.debuff": "-0.5 Rendimiento de cultivo avanzado",
   "skill.fruityHeaven": "-10% de costo de semillas de fruta",
   "skill.fruityProfit": "+50% de monedas de las entregas de Tango",
-  "skill.loyalMacaw": "El efecto de Double Guacamaw",
+  "skill.loyalMacaw": "Duplica el efecto de Macaw",
   "skill.fruityWoody": "+1 madera de ramas y tallos de frutas",
   "skill.pearTurbocharge": "El efecto de Double Immortal Pear",
   "skill.longPickings.buff": "-50% de tiempo de crecimiento de manzanas y plátanos",
@@ -4146,8 +4146,8 @@
   "skill.zestyVibes.buff": "+1 Producción de tomate y limón",
   "skill.lumberjacksExtra": "+0,1 rendimiento de madera",
   "skill.treeCharge": "-10% de tiempo de crecimiento de los árboles",
-  "skill.moreAxes": "+50 culata de hacha",
-  "skill.instaChop": "Árboles de 1 grifo",
+  "skill.moreAxes": "+50 stock de hachas",
+  "skill.instaChop": "Corta los árboles con 1 solo click",
   "skill.fellersDiscount": "-20% de coste del hacha",
   "skill.moneyTree": "1% de probabilidad de encontrar 200 monedas al cortar árboles",
   "skill.treeBlitz": "Capacidad para hacer que todos los árboles crezcan al instante",
@@ -4159,19 +4159,19 @@
   "skill.moreWithLess.debuff": "-1 gusano de todos los compostadores",
   "skill.fishyFeast": "+20% de EXP por pesca",
   "skill.abundantHarvest": "+0.2 Producción de huevos, lana y leche",
-  "skill.efficientFeeding": "-5% de pienso para alimentar a todos los animales",
-  "skill.doubleBale": "El doble efecto de Bale",
+  "skill.efficientFeeding": "-5% de comida para alimentar a todos los animales",
+  "skill.doubleBale": "Duplica el efecto del Bale",
   "skill.fineFibers": "+0,1 Rendimiento en plumas, piel y lana merino",
   "skill.bountifulBounties": "+50% de monedas de Animal Bounties",
   "skill.heartwarmingInstruments": "+50% de EXP animal gracias a las herramientas de afecto animal",
-  "skill.kaleMix": "En su lugar, Mixed Grain requiere 3 col rizada para mezclar",
+  "skill.kaleMix": "Reemplaza los ingredientes del Mixed Grain por 3 Kale",
   "skill.healthyLivestock": "-50% de probabilidad de enfermedad",
-  "skill.cluckyGrazing.buff": "-25% de pienso para alimentar pollos",
-  "skill.cluckyGrazing.debuff": "Más del 50% de pienso para alimentar a otros animales",
-  "skill.sheepwiseDiet.buff": "-25% de pienso para alimentar ovejas",
-  "skill.sheepwiseDiet.debuff": "Más del 50% de pienso para alimentar a otros animales",
-  "skill.cowSmartNutrition.buff": "-25% de pienso para alimentar a las vacas",
-  "skill.cowSmartNutrition.debuff": "Más del 50% de pienso para alimentar a otros animales",
+  "skill.cluckyGrazing.buff": "-25% de comida para alimentar pollos",
+  "skill.cluckyGrazing.debuff": "Más del 50% de comida para alimentar a otros animales",
+  "skill.sheepwiseDiet.buff": "-25% de comida para alimentar ovejas",
+  "skill.sheepwiseDiet.debuff": "Más del 50% de comida para alimentar a otros animales",
+  "skill.cowSmartNutrition.buff": "-25% de comida para alimentar a las vacas",
+  "skill.cowSmartNutrition.debuff": "Más del 50% de comida para alimentar a otros animales",
   "skill.victoriasSecretary": "+50% de monedas de las entregas de Victoria",
   "skill.oliveExpress": "-10% de tiempo de crecimiento de la aceituna",
   "skill.riceRocket": "-10% de tiempo de crecimiento del arroz",
@@ -4181,7 +4181,7 @@
   "skill.rockAndRoll": "+0,1 Rendimiento de piedras",
   "skill.ironBumpkin": "+0,1 Rendimiento de hierro",
   "skill.speedMiner": "-20% de tiempo de recuperación de piedras",
-  "skill.tapProspector": "1 cucharadita de pequeños nodos minerales",
+  "skill.tapProspector": "Recolecta los nodos de minerales pequeños con 1 solo click",
   "skill.forgeWardProfits": "+20% de ingresos por entregas de Blacksmith",
   "skill.ironHustle": "-30% de tiempo de recuperación de hierro",
   "skill.rockyFavor.buff": "Rendimiento de +1 piedra",
@@ -4193,16 +4193,16 @@
   "skill.fastFeasts": "-10% de tiempo de cocción en la hoguera y en la cocina",
   "skill.nomNom": "+10% de ingresos por entrega de alimentos",
   "skill.munchingMastery": "+5% de experiencia al comer",
-  "skill.swiftSizzle": "-40% de tiempo de cocción en hoguera con aceite",
+  "skill.swiftSizzle": "-40% de tiempo de cocción con aceite para comidas del Firepit",
   "skill.frostedCakes": "-10% de tiempo de cocción de las tartas",
   "skill.juicyBoost": "+10% de experiencia en bebidas del Smoothie Shack",
   "skill.doubleNom.buff": "+1 comida de cocina",
   "skill.doubleNom.debuff": "2 veces los ingredientes necesarios para cocinar",
-  "skill.turboFry": "-50% de tiempo de cocción en cocina con aceite",
+  "skill.turboFry": "-50% de tiempo de cocción con aceite para comidas de la Kitchen",
   "skill.instantGratification": "Capacidad para preparar todas las comidas que se están cocinando actualmente listas para ser consumidas",
-  "skill.driveThroughDeli": "+15% de experiencia en comidas de la tienda de delicatessen",
+  "skill.driveThroughDeli": "+15% de experiencia para las comidas de la Deli",
   "skill.fieryJackpot": "+20% de probabilidad de obtener +1 comida de Firepit",
-  "skill.fryFrenzy": "-60% de tiempo de cocción de delicatessen con aceite",
+  "skill.fryFrenzy": "-60% de tiempo de cocción con aceite para comidas de la Deli",
   "skill.sweetBonus": "+0,1 Miel por colmena",
   "skill.hyperBees": "+0.1 Velocidad de producción de miel",
   "skill.bloomingBoost": "-10% de tiempo de crecimiento de las flores",
@@ -4224,13 +4224,13 @@
   "skill.fieldExtensionModule": "+5 parcelas añadidas a la máquina",
   "skill.greaseLightning": "Capacidad de hacer que los pozos de petróleo vacíos se rellenen instantáneamente",
   "skill.efficientBin": "+5 Sprout Mix",
-  "skill.turboCharged": "+5 Mezcla fructífera",
+  "skill.turboCharged": "+5 Fruitful Blend",
   "skill.wormyTreat": "+1 Gusano",
   "skill.featheryBusiness.buff": "Usa plumas en lugar de huevos para impulsar los compostadores",
   "skill.featheryBusiness.debuff": "2 veces más plumas para mejorar los compostadores",
   "skill.swiftDecomposer": "-10% de tiempo de compostaje",
   "skill.premiumWorms": "+10 Raíz rápida",
-  "skill.compostingBonanza.debuff": "El doble de recursos para impulsar los compostadores",
+  "skill.compostingBonanza.debuff": "Usa el doble de recursos para impulsar los compostadores",
   "skill.compostingOverhaul.buff": "+2 Gusanos",
   "skill.compostingOverhaul.debuff": "-5 abonos",
   "skill.compostingRevamp.buff": "+5 fertilizantes",
@@ -4273,16 +4273,16 @@
   "competition.intro.two": "Estamos organizando una competencia agrícola para encontrar a los mejores ganaderos del juego.",
   "competition.rules.five": "Gana un premio extra si vences a Craig, Spencer o Adam.",
   "skill.fruitfulFumble": "+0,1 de rendimiento de frutos",
-  "skill.catchup": "-10% de tiempo de crecimiento de la fruta",
-  "skill.crimeFruit": "+10 caldo de semillas de tomate y limón",
+  "skill.catchup": "-10% de tiempo de crecimiento de las frutas",
+  "skill.crimeFruit": "+10 stock de semillas de tomate y limón",
   "skill.generousOrchard": "20% de probabilidad de obtener +1 fruta",
   "skill.longPickings.debuff": "+100% de tiempo de crecimiento para todas las demás frutas",
   "skill.shortPickings.debuff": "+100% de tiempo de crecimiento para todas las demás frutas",
   "skill.frenziedFish": "Durante el frenesí de peces, +1 pez y 50% de probabilidad de obtener +1 pez",
   "skill.restlessAnimals": "-10% del tiempo de sueño de los animales",
-  "skill.baleEconomy": "La paca afecta a la producción de leche y lana",
-  "skill.chonkyFeed.buff": "2 veces la experiencia animal obtenida con piensos",
-  "skill.chonkyFeed.debuff": "+50% de pienso para alimentar a todos los animales",
+  "skill.baleEconomy": "El Bale afecta a la producción de leche y lana",
+  "skill.chonkyFeed.buff": "2x veces la experiencia animal obtenida con comida",
+  "skill.chonkyFeed.debuff": "+50% de comida para alimentar a todos los animales",
   "skill.glassRoom": "+0,1 Rendimiento de productos de invernadero",
   "skill.riceAndShine": "-5% de tiempo de crecimiento para productos de invernadero",
   "skill.seededBounty.buff": "+0,5 Rendimiento de productos de invernadero",
@@ -4291,7 +4291,7 @@
   "skill.greenhouseGamble": "25% de probabilidad de obtener +1 producto de invernadero",
   "skill.floweryAbode.debuff": "+50% de tiempo de crecimiento de las flores",
   "skill.compostingBonanza.buff": "Acelere los compostadores una hora más al aumentar",
-  "skill.fruitfulBounty": "El efecto de Double Fruitful Blend",
+  "skill.fruitfulBounty": "Dobla el efecto del fertilizante Fruitful Blend",
   "mayor.plaza.metBefore": "¡Hola {{username}}! Parece que ya nos conocimos. Si quieres cambiarte el nombre, no puedo hacer eso por ti ahora mismo, el papeleo es demasiado para mí.",
   "mayor.plaza.coffee": "Hmmm, ¿no te encanta el olor del café?",
   "mayor.plaza.intro": "Hola, amigo Bumpkin, parece que aún no nos han presentado.",
@@ -4347,7 +4347,7 @@
   "description.scarecrow.boost": "+20% de rendimiento de la cosecha",
   "description.kuebiko.boost": "Semillas gratis",
   "description.gnome.boost": "+10 de rendimiento para cultivos medios/avanzados",
-  "description.gnome.boost.aoe": "Afecta al gráfico siguiente",
+  "description.gnome.boost.aoe": "Área de efecto 1 parcela debajo del Gnome",
   "description.cabbage.boy.boost": "+0.25 Repollo",
   "description.cabbage.boy.boost.boosted": "+0.5 Repollo (mejora de Cabbage Girl)",
   "description.queen.cornelia.boost": "+1 Maíz",
@@ -4578,7 +4578,7 @@
   "reputation.unlock.humanity": "Prueba de humanidad completa: {{points}} puntos",
   "reputation.unlock.level": "Alcanza el nivel 100: puntos {{points}}",
   "reputation.unlock.level15": "Alcanza el nivel 15: puntos {{points}}",
-  "reputation.unlock.bud": "Consigue un cogollo: puntos {{points}}",
+  "reputation.unlock.bud": "Tener un Bud NFT: puntos {{points}}",
   "reputation.unlock.vip": "Acceso VIP: puntos {{points}}",
   "reputation.vip.purchase": "Compra un pase VIP",
   "reputation.sprout": "Brotar",
@@ -4754,7 +4754,7 @@
   "description.frozen.cow": "Una vaca que ha quedado completamente congelada por los vientos del invierno.",
   "description.summer.chicken.boost": "No hay enfermedad de los pollos durante el verano",
   "description.summer.chicken": "¡Un pollo amante del sol que prospera con el calor del verano, disfrutando de los cálidos rayos y cacareando de alegría!",
-  "description.jellyfish.boost": "Aumente la captura de peces en un 1% en verano",
+  "description.jellyfish.boost": "+1 pez en la estacion de Verano",
   "description.jellyfish": "Una luminosa maravilla marina que brilla con energía mística y que permite mejorar las habilidades de pesca durante los cálidos meses de verano.",
   "description.chamomile": "Una flor mutante decorativa encontrada durante el capítulo Vientos de cambio.",
   "islandupgrade.exoticResourcesDescription": "Esta área de Sunflower Land es conocida por sus recursos exóticos. ¡Amplía tu tierra para descubrir frutas, flores, colmenas de abejas y minerales raros! Esté atento a las estaciones, ya que afectan a lo que puede cultivar.",
@@ -5271,7 +5271,7 @@
   "skill.fishyGamble": "20% de probabilidad de obtener +1 pez experto",
   "skill.barnyardRouse": "Despierta instantáneamente a todos los animales",
   "skill.morePicks": "Mayor stock: +70 picos, +20 picos de piedra, +7 picos de hierro, +2 picos de oro",
-  "skill.fieldExpansionModule": "Se han añadido más de 5 paquetes al sistema de cola de máquinas",
+  "skill.fieldExpansionModule": "Añade más de 5 slot de paquetes para el sistema de cola de la máquina",
   "skillReset.skillsReset": "Restablecimiento de habilidades",
   "skillReset.free": "Reinicio gratuito",
   "skillReset.gems": "Restablecimiento de gemas",
