[FIX] Bale's Boost Description with Skills

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -204,7 +204,7 @@
   "description.scary.mike": "Boost nearby Medium Crops.",
   "description.laurie.chuckle.crow": "Boost nearby Advanced Crops.",
   "description.immortal.pear": "Increase the survival of your fruit patches.",
-  "description.bale": "Boost Egg Yield.",
+  "description.bale": "A golden touch of the harvest.",
   "description.sir.goldensnout": "A royal member, Sir Goldensnout infuses your farm with sovereign prosperity through its golden manure.",
   "description.freya.fox": "Enchanting guardian, boosts pumpkin growth with her mystical charm. Harvest abundant pumpkins under her watchful gaze.",
   "description.queen.cornelia": "Command the regal power of Queen Cornelia and experience a magnificent Area of Effect boost to your corn production. +1 Corn.",
@@ -226,7 +226,12 @@
   "description.laurie.chuckle.crow.boost.skill": "+0.3 Advanced Crops",
   "description.laurie.chuckle.crow.boost.aoe": "Area of Effect (3x3) below",
   "description.laurie.chuckle.crow.boost.aoe.skill": "Area of Effect (7x7) below",
-  "description.bale.boost": "+0.1 Egg",
+  "description.bale.eggBoost": "+0.1 Egg",
+  "description.bale.eggBoost.boosted": "+0.2 Egg",
+  "description.bale.milkBoost": "+0.1 Milk",
+  "description.bale.milkBoost.boosted": "+0.2 Milk",
+  "description.bale.woolBoost": "+0.1 Wool",
+  "description.bale.woolBoost.boosted": "+0.2 Wool",
   "description.immortal.pear.boost": "+1 Fruit Harvest per seed",
   "description.immortal.pear.boosted.boost": "+2 Fruit Harvest per seed",
   "description.treasure.map.boost": "+20% Coins Treasure Sale Price",
