[FEAT] Link Telegram (#5403)
* Telgram linkage

* Link it up

* Basic UI

* UI Updats

* Social section

* Telegram instructions

* Bolden instructions

* [FEAT] YML Keys

* [FEAT] Fix port fetch

* Fix load

* Join Telegram link

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5653,5 +5653,23 @@
   "faceRecognition.failedTitle": "Failed",
   "faceRecognition.failedDescription": "Hmm, it looks like we were not able to detect a human face in your last attempt. Please try again.",
   "faceRecognition.successTitle": "Success",
-  "faceRecognition.successDescription": "You have successfully verified your identity. Time to get farming!"
+  "faceRecognition.successDescription": "You have successfully verified your identity. Time to get farming!",
+  "telegram.title": "Telegram",
+  "telegram.joinedAt": "Joined",
+  "telegram.notifications": "Daily reminders & special event notifications.",
+  "telegram.community": "Join our community for tips & tricks.",
+  "telegram.rewards": "Exclusive rewards & giveaways.",
+  "telegram.step1": "Step 1: Connect Telegram",
+  "telegram.step2": "Step 2: Start Bot",
+  "telegram.step3": "Step 3: Join Channel",
+  "telegram.botDescription": "Start your conversation with the Sunflower Land bot. Learn tips, get reminders & access exclusive rewards.",
+  "telegram.alreadyStarted": "Already started?",
+  "telegram.startBot": "Start Bot",
+  "telegram.joinChannel": "Join the official channel...",
+  "telegram.alreadyJoined": "Already joined?",
+  "telegram.join": "Join Channel",
+  "linking.telegram": "Linking Telegram...",
+  "linking.telegram.success": "Telegram linked!",
+  "joining.telegram": "Checking whether you're a member of the channel...",
+  "joining.telegram.success": "Telegram joined!"
 }
