--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5671,5 +5671,13 @@
   "linking.telegram": "Linking Telegram...",
   "linking.telegram.success": "Telegram linked!",
   "joining.telegram": "Checking whether you're a member of the channel...",
-  "joining.telegram.success": "Telegram joined!"
+  "joining.telegram.success": "Telegram joined!",
+  "following.twitter.success": "Twitter followed!",
+  "following.twitter.failed": "Twitter not followed",
+  "following.twitter.failed.description": "Please follow the official Sunflower Land Twitter account to continue.",
+  "twitter.title": "X (Twitter)",
+  "twitter.description": "Connect your X account to earn rewards!",
+  "twitter.connected": "Connected",
+  "twitter.connect": "Connect Twitter",
+  "twitter.follow": "Follow Twitter"
 }
