[CHORE] PR feedback

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5684,7 +5684,7 @@
   "twitter.connected": "Connected",
   "twitter.connect": "Connect Twitter",
   "twitter.follow": "Follow Twitter",
-  "transaction.payFlower": "Pay with $FLOWER",
+  "transaction.payFlower": "Use FLOWER",
   "buying.gems": "Buying gems",
   "buying.gems.success": "Congratulations, your gems were purchased successfully!",
   "error.insufficientFlower": "Insufficient FLOWER",
