--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5573,6 +5573,7 @@
   "ronin.comingSoon": "April 1st - Use Ronin wallet to purchase gems, mint NFTs, trade & more!",
   "announcement.lockdown": "To prepare for $FLOWER, $SFL withdrawals and deposits will be disabled from March 24th.",
   "announcement.flowerGems": "Buy Gems with $FLOWER - coming May 2025",
+  "announcement.flowerGemsDiscount": "Buy Gems with $FLOWER - save 30%",
   "announcement.gasless": "Gasless transactions are coming April 1st.",
   "rocketman.intro": "Howdy Bumpkin, I'm trying to build a flower tower to the moon!",
   "rocketman.flower.coming": "$FLOWER is coming",
@@ -5682,5 +5683,11 @@
   "twitter.description": "Connect your X account to earn rewards!",
   "twitter.connected": "Connected",
   "twitter.connect": "Connect Twitter",
-  "twitter.follow": "Follow Twitter"
+  "twitter.follow": "Follow Twitter",
+  "transaction.payFlower": "Use FLOWER",
+  "buying.gems": "Buying gems",
+  "buying.gems.success": "Congratulations, your gems were purchased successfully!",
+  "error.insufficientFlower": "Insufficient FLOWER",
+  "gems": "Gems",
+  "usd": "USD"
 }
