--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5577,6 +5577,7 @@
   "announcement.flowerGems": "Buy Gems with $FLOWER - coming May 2025",
   "announcement.flowerGemsDiscount": "Buy Gems with $FLOWER - save 30%",
   "announcement.gasless": "Gasless transactions are coming April 1st.",
+  "announcement.referral": "Refer a friend and earn Love Charms!",
   "rocketman.intro": "Howdy Bumpkin, I'm trying to build a flower tower to the moon!",
   "rocketman.flower.coming": "$FLOWER is coming",
   "rocketman.flower.launch": "On April 1st, $FLOWER will be added to the game!",
@@ -5585,6 +5586,7 @@
   "rocketman.flower.eligible": "Polygon, Ronin & BASE users are eligible.",
   "select.player": "Select Player",
   "errorLabelText": "Error",
+  "share.CopyReferralLink": "Copy Referral Link",
   "connectionTimeoutHeaderText": "Connection time out",
   "connectionTimeoutMessageText": "Connection has timed out.",
   "timeoutHeaderText": "Time out",
