--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5577,7 +5577,7 @@
   "announcement.flowerGems": "Buy Gems with $FLOWER - coming May 2025",
   "announcement.flowerGemsDiscount": "Buy Gems with $FLOWER - save 30%",
   "announcement.gasless": "Gasless transactions are coming April 1st.",
-  "announcement.referral": "Refer a friend and earn Love Charms!",
+  "announcement.referral": "Refer a friend and earn Rewards!",
   "rocketman.intro": "Howdy Bumpkin, I'm trying to build a flower tower to the moon!",
   "rocketman.flower.coming": "$FLOWER is coming",
   "rocketman.flower.launch": "On April 1st, $FLOWER will be added to the game!",
@@ -5710,5 +5710,19 @@
   "deposit.flower.refreshing": "Refreshing...",
   "deposit.flower.refreshDeposit": "Refresh deposits",
   "faceRecognition.cooldownTitle": "Too many attempts",
-  "faceRecognition.cooldownDescription": "Please wait before trying again."
+  "faceRecognition.cooldownDescription": "Please wait before trying again.",
+  "socialTask.referFriend": "Refer a friend",
+  "socialTask.referFriend.description": "Refer a friend to join the game using your referral link - One time only!",
+  "socialTask.referVipFriend": "Refer a VIP friend",
+  "socialTask.referVipFriend.description": "Refer a friend to join the game and they must buy VIP before you can earn Rewards!",
+  "socialTask.linkDiscord": "Link your Discord",
+  "socialTask.linkDiscord.description": "Link your Discord to your account",
+  "socialTask.linkTelegram": "Link your Telegram",
+  "socialTask.linkTelegram.description": "Link your Telegram to your account",
+  "socialTask.upgradeToPetalParadise": "Upgrade to Petal Paradise",
+  "socialTask.upgradeToPetalParadise.description": "Expand your land fully and upgrade to Petal Paradise",
+  "socialTask.complete50Deliveries": "Complete 50 deliveries",
+  "socialTask.complete50Deliveries.description": "Go to the plaza and complete deliveries with various NPCs 50 times",
+  "socialTask.joinStream": "Join a stream",
+  "socialTask.joinStream.description": "Join a dev chat on discord or twitch stream to earn 1 Love Charm every 5 minutes from the host wearing a stream hat."
 }
