--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2341,6 +2341,7 @@
   "islandupgrade.warning": "Make sure you do not have any crops, fruit, buildings, chickens, crimstone, flowers or honey in progress. These will not be able to be harvested and will be returned to your inventory. Sunstones, House, Market, Fire Pit and Workbench will remain placed on your land.",
   "islandupgrade.upgradeIsland": "Upgrade Island",
   "islandupgrade.newOpportunities": "An exotic island awaits you with new resources and opportunities to grow your farm.",
+  "islandupgrade.tempItemWarning": "Active totems/hourglasses will be burned",
   "islandupgrade.confirmation": "Would you like to upgrade? You will start on a small island with all of your items.",
   "islandupgrade.locked": "Locked",
   "islandupgrade.exploring": "Exploring",
