[FEAT] Update translation pt-BR.json
improvement in the translation of words and correction of the meaning/significance of the sentences in which they are applied

--- a/src/lib/i18n/dictionaries/pt-BR.json
+++ b/src/lib/i18n/dictionaries/pt-BR.json
@@ -3959,7 +3959,7 @@
   "eggcellentCollection.description": "Colete ovos 10 vezes",
   "skill.youngFarmer": "+0,1 Rendimento básico da safra",
   "skill.experiencedFarmer": "+0,1 Rendimento médio da safra",
-  "skill.bettysFriend": "A receita de entrega da Betty Coin aumentou em 30%",
+  "skill.bettysFriend": "As entregas na loja da Betty aumentam os coins ganhos em 30%",
   "marketplace": "Marketplace",
   "marketplace.buy": "Compre, troque, venda!",
   "marketplace.item": "Item",
@@ -4128,12 +4128,12 @@
   "description.festiveToyTrain": "Um boneco de neve especial que, por algum motivo, nunca derrete!?",
   "marketplace.available": "Disponível: {{count}}",
   "bumpkinItemBuff.angler.waders.boost": "+10 limite diário de pesca",
-  "skill.strongRoots": "-10% Tempo avançado de crescimento da safra",
-  "skill.acreFarm.buff": "+1 Rendimento avançado da safra",
-  "skill.acreFarm.debuff": "-0,5 Rendimento básico e médio da safra",
-  "skill.hectareFarm.buff": "+1 Rendimento básico e médio da safra",
-  "skill.hectareFarm.debuff": "-0,5 Rendimento avançado da safra",
-  "skill.fruityHeaven": "-10% de custo de sementes de frutas",
+  "skill.strongRoots": "-10% no tempo de crescimento da safra avançada",
+  "skill.acreFarm.buff": "+1 Rendimento da safra avançada",
+  "skill.acreFarm.debuff": "-0,5 Rendimento da safra básica e média",
+  "skill.hectareFarm.buff": "+1 Rendimento da safra básica e média",
+  "skill.hectareFarm.debuff": "-0,5 Rendimento da safra avançada",
+  "skill.fruityHeaven": "-10% no custo de sementes de frutas",
   "skill.fruityProfit": "+50% de moedas das entregas do Tango",
   "skill.loyalMacaw": "Efeito Double Macaw",
   "skill.fruityWoody": "+1 madeira de galhos e caules de frutas",
@@ -4143,8 +4143,8 @@
   "skill.zestyVibes.buff": "+1 Rendimento de tomate e limão",
   "skill.lumberjacksExtra": "+0,1 rendimento de madeira",
   "skill.treeCharge": "-10% de tempo de crescimento da árvore",
-  "skill.moreAxes": "+50 machados",
-  "skill.instaChop": "Corta as árvores com 1 solo click",
+  "skill.moreAxes": "Estoque aumentado em +50 machados",
+  "skill.instaChop": "Corta as árvores com 1 só click",
   "skill.fellersDiscount": "-20% do custo do machado",
   "skill.moneyTree": "1% de chance de encontrar 200 moedas ao cortar árvores",
   "skill.treeBlitz": "Capacidade de fazer todas as árvores crescerem instantaneamente",
@@ -4177,8 +4177,8 @@
   "skill.rockAndRoll": "+0,1 Rendimento de Pedra",
   "skill.ironBumpkin": "+0,1 Rendimento de ferro",
   "skill.speedMiner": "-20% de tempo de recuperação de pedras",
-  "skill.tapProspector": "Minere os minerais pequenhos com 1 solo click",
-  "skill.forgeWardProfits": "+20% de receita de entregas de ferreiros",
+  "skill.tapProspector": "Minere os minerais pequenhos com 1 só click",
+  "skill.forgeWardProfits": "+20% de coins nas entregas do ferreiro",
   "skill.ironHustle": "-30% de tempo de recuperação de ferro",
   "skill.rockyFavor.buff": "+1 Rendimento de pedra",
   "skill.rockyFavor.debuff": "-0,5 Rendimento de ferro",
@@ -4187,8 +4187,8 @@
   "skill.goldenTouch": "+0.5 Rendimento de ouro",
   "skill.firesideAlchemist": "-15% de tempo de recuperação do Crimstone",
   "skill.fastFeasts": "-10% de tempo de cozimento da fogueira e da cozinha",
-  "skill.nomNom": "+10% de receita com entregas de alimentos",
-  "skill.munchingMastery": "+5% de experiência em comer refeições",
+  "skill.nomNom": "+10% de coins nas entregas de alimentos",
+  "skill.munchingMastery": "+5% de experiência ao comer refeições",
   "skill.swiftSizzle": "-40% de tempo de cozimento do Fire Pit com óleo",
   "skill.frostedCakes": "-10% de tempo de cozimento dos bolos",
   "skill.juicyBoost": "+10% de experiência com bebidas do Smoothie Shack",
@@ -5261,7 +5261,7 @@
   "chore.prepare.bumpkinDetox.15": "Prepare 15 Bumpkin Detox",
   "chore.grow.whitePansy.3": "Grow 3 White Pansy",
   "chore.cook.fermentedFish.5": "Cozinhe 5 peixes fermentados",
-  "skill.instantGrowth": "Concede a capacidade de colher instantaneamente todas as safras atualmente em parcelas",
+  "skill.instantGrowth": "Concede a capacidade de colher instantaneamente todas as safras atualmente plantadas",
   "skill.zestyVibes.debuff": "-0,25 de rendimento para todas as outras frutas",
   "skill.fishyGamble": "20% de chance de +1 peixe experiente",
   "skill.barnyardRouse": "Acorda instantaneamente todos os animais",
