--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5730,7 +5730,7 @@
   "socialTask.joinStream": "Join a stream",
   "socialTask.joinStream.description": "Join a dev chat on discord or twitch stream to earn 1 Love Charm every 5 minutes from the host wearing a stream hat.",
   "claimReferralRewards.title": "Referral Rewards",
-  "claimReferralRewards.description": "Congratulations! {{totalUnclaimedReferrals}} new players have joined using your referral link. Here are your rewards!",
+  "claimReferralRewards.description": "Congratulations! {{totalUnclaimedReferrals}} new players have joined and bought VIP using your referral link. Here are your rewards!",
   "referral.vip": "25 Love Charms when your friend buys VIP",
   "referral.friend": "25 Love Charms when your friend signs up using your referral link - One time only",
   "referral.flower": "10% of $FLOWER spent by your friend",
