Allow player to select username again

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -744,7 +744,7 @@
   "mayor.plaza.enterUsernamePrompt": "What name would you like to be known as?",
   "mayor.plaza.usernameValidation": "Just remember, your chosen name needs to follow our",
   "mayor.plaza.congratulations": "Well {{username}}, the paperwork is all done - you're officially a named citizen of Sunflower Land!",
-  "mayor.paperworkComplete": "Your paperwork is now complete. See you around",
+  "mayor.paperworkComplete": "Congratulations {{username}}, your paperwork is now complete. See you around!",
   "mayor.plaza.firstDelivery": "good luck finding {{npc}}! I am sure I saw them around here somewhere...",
   "mayor.plaza.businessDone": "Ok, now that we have the official business out of the way...",
   "mayor.plaza.welcome": "I would like to officially welcome you to Pumpkin Plaza, a place where Bumpkins come from far and wide to socialize, complete deliveries and play mini-games.",
@@ -753,7 +753,7 @@
   "mayor.plaza.haveFun": "I better get back to work. Have fun exploring!",
   "mayor.codeOfConduct": "Code of Conduct",
   "mayor.failureToComply": "Failure to comply may result in penalties, including possible account suspension",
-  "mayor.plaza.changeNamePrompt": "Do you want to change your name? Unfortunately, I can't do that for you right now, the paperwork is too much for me to handle.",
+  "mayor.plaza.changeNamePrompt": "Do you want to change your name? I have some good news! We have gotten some paperwork done and now you will be able to change your name. Do you want to proceed?",
   "mayor.plaza.niceToMeetYou": "Nice to meet you, !",
   "mayor.plaza.enjoyYourStay": "I hope you enjoy your stay in Sunflower Land! If you ever need me again, just come back to me!",
   "crop.boom.welcome": "Welcome to Crop Boom",
