If username is the same as your current username throw error

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3576,6 +3576,7 @@
   "username.tooLong": "Username is too long (max 12 characters)",
   "username.invalidChar": "Username contains invalid characters",
   "username.startWithLetter": "Username must start with a letter",
+  "username.sameAsCurrent": "Username is the same as your current username",
   "tutorial.pageOne.text1": "This menu will show you the levels required to unlock new buildings.",
   "tutorial.pageOne.text2": "Some of these can be built multiple times once you reach a certain level.",
   "tutorial.pageTwo.text1": "Buildings are an important way to progress through the game as they will help you to expand and evolve.",
