Enhance username assignment functionality and UI updates
- Added new effect for username assignment in the game state.
- Updated WorldIntroduction and Mayor components to utilize the new username assignment effect.
- Removed unnecessary saveUsername function calls and replaced them with state machine events.
- Improved UI to reflect current username and validation states.
- Added new translation keys for username assignment feedback.

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3578,6 +3578,8 @@
   "username.invalidChar": "Username contains invalid characters",
   "username.startWithLetter": "Username must start with a letter",
   "username.sameAsCurrent": "Username is the same as your current username",
+  "assigning.username": "Assigning username...",
+  "assigning.username.success": "Username assigned successfully!!",
   "tutorial.pageOne.text1": "This menu will show you the levels required to unlock new buildings.",
   "tutorial.pageOne.text2": "Some of these can be built multiple times once you reach a certain level.",
   "tutorial.pageTwo.text1": "Buildings are an important way to progress through the game as they will help you to expand and evolve.",
