--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3580,6 +3580,8 @@
   "username.sameAsCurrent": "Username is the same as your current username",
   "assigning.username": "Assigning username...",
   "assigning.username.success": "Username assigned successfully!!",
+  "changing.username": "Changing username...",
+  "changing.username.success": "Username changed successfully!!",
   "tutorial.pageOne.text1": "This menu will show you the levels required to unlock new buildings.",
   "tutorial.pageOne.text2": "Some of these can be built multiple times once you reach a certain level.",
   "tutorial.pageTwo.text1": "Buildings are an important way to progress through the game as they will help you to expand and evolve.",
