[FEAT] Include more marketplace details

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5740,5 +5740,9 @@
   "taskBoard.tasksDescription": "Complete tasks to earn Love Charm.",
   "taskBoard.tasksDescriptionTwo": "Love Charm can be used to purchase special items in the rewards shop",
   "taskBoard.otherWays": "Other ways to earn Love Charm",
-  "taskBoard.howToRefer": "How to refer a friend?"
+  "taskBoard.howToRefer": "How to refer a friend?",
+  "marketplace.bought": "Bought",
+  "marketplace.sold": "Sold",
+  "marketplace.madeOffer": "Made Offer",
+  "marketplace.acceptedOffer": "Accepted Offer"
 }
