Implement StreamReward Modal to claim once ever 5 minutes

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1893,6 +1893,7 @@
   "chores": "Chores",
   "choose.wisely": "Choose wisely!",
   "claim": "Claim",
+  "claimed": "Claimed",
   "claim.gift": "Claim Gift",
   "claim.skill": "Claim Skill",
   "clear": "Clear",
